# yolo-training-pipeline

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  onnx_demo.py
configs/: config.cuda.maxacc.yaml  config.example.yaml  config.mps.maxacc.yaml  custom_train.example.yaml  deepfashion2_train.example.yaml  fashionpedia_train.example.yaml
configs/bench/: cpu.example.yaml  gpu.example.yaml
configs/prepare/: prepare.example.yaml  yolo_dataset.yaml
configs/train/: nvidia.example.yaml  nvidia.yaml
core/: __init__.py
core/bench/: __init__.py  config.py  data.py  models.py  render.py  report.py  runtime.py  utils.py
core/common/: __init__.py  cli.py  errors.py  fs.py  logging.py  progress.py
core/datasets/: __init__.py  common.py  convert_dataset_to_yolo.py  filtering.py  pipeline_utils.py  prepare_yolo_dataset.py  stats.py
core/onnx/: __init__.py  calibrate.py  common.py  exporter.py  infer.py  optimizer.py  pipeline.py
core/training/: __init__.py  report_ap.py  train.py
docs/: ARCHITECTURE.md  BENCH.md  CLI.md  DATASETS.md  ONNX.md  TRAINING.md
scripts/: download_clothes_dataset.sh  download_datasets.sh  download_deepfashion2.sh  download_fashionpedia.sh  download_models.sh  download_yolo_models.sh  setup_env.sh
tools/: __init__.py  _runtime.py  convert_coco_to_yolo.py  convert_dataset_to_yolo.py  convert_deepfashion2_to_yolo.py  filter_yolo_dataset_classes.py  merge_yolo_datasets.py  prepare_dataset.py  prepare_yolo_dataset.py  print_classes_taxonomi.py  print_yolo_dataset_stats.py  report_ap.py  report_per_class_ap.py  run_pipeline.py  train.py  train_yolo.py  yolo_bench_report.py
tools/onnx/: __init__.py  compare.py  export.py  optimize.py  pipeline.py
